# haskell-tdd

./: .gitignore  README.md  haskell-tdd.cabal  hie.yaml  myproject.cabal  package.yaml
src/: AoC7.hs  GenerateParentheses22.hs  Lib.hs  Main.hs  MaxPath3742.hs  MaxScore3225.hs  MinOp2023.hs  NQueens51.hs  Rotate396.hs  RotateFunction396.hs  RotateString796.hs  RotatedDigits788.hs
test/: AoC7Spec.hs  LibSpec.hs  MaxPathSpec.hs  MaxScoreSpec.hs  MinOpSpec.hs  NQueensSpec.hs  Spec.hs
