cabal-version:       2.2

name:                haskell-tdd
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2026 Author name here
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall

executable haskell-tdd
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall

test-suite haskell-tdd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-tdd
                     , hspec ^>=2.11.17
                     , hspec-discover ^>=2.11.17
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-tdd
